<resources>
    <string name="app_name">ActivityResults</string>
    <string name="header_text_main">Please click th ebutton below to choose your fav colour</string>
    <string name="header_text_picker">Rainbow Colors</string>
    <string name="footer_text_picker">Click the button above which is your fav colour</string>
    <string name="color_chosen_message">%s is your fav colour</string>
    <string name="submit_btn_text">CHOOSE COLOR</string>

    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>

    <string name="unexpected_color_msg">Unexpected Color</string>
</resources>